[package]
name = "metamorph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.102"
reqwest = { version = "0.13.4", features = ["json"] }
spinners = "4.2.0"
comfy-table = "7.2.2"
serde_json_path = "0.7.2"
reqwest-streams = { version = "0.15", features=["json"] }
futures = "0.3.32"
